# Deep-Learning-libary-from-scratch

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  deepmodel_benchmark.cpp  pytorch_benchmark.py
examples/: fashion_mnist.cpp
headers/: DeepModel.h  activation.h  matrix.h  model.h
headers/CPU/: activationCPU.h  matrixCPU.h  modelCPU.h
headers/CUDA/: activationCUDA.cuh  matrixCUDA.cuh
setup/: download_mnist.sh
src/: CMakeLists.txt  dataset.cpp  main.cpp  neuralnetwork.cpp
src/CPU/: activationCPU.cpp  classificatorCPU.cpp  datasetCPU.cpp  matrixCPU.cpp  modelCPU.cpp  neuralnetworkCPU.cpp
src/CUDA/: activationCUDA.cu  datasetCUDA.cu  kernel.cu  matrixCUDA.cu  neuralnetworkCUDA.cu
